# kaggle-fraud

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: pipeline.py
src/import/: get_raw_data.py
src/process/: aggregate.py  analysis.py  outlier_detection.py
src/process/utils/: exporter.py  pathreader.py
tests/: test_aggregate.py  test_analysis.py  test_outlier_detection.py  test_pathreader.py
