[project]
name = "kaggle-fraud"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle (>=1.6.17,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "kagglehub (>=0.3.6,<0.4.0)",
    "pyspark (>=3.5.4,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
